# ssshop

./: Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  pyproject.toml  replit.md  requirements.txt
shop/: admin.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py
ssshop/: asgi.py  settings.py  wsgi.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/shop/: product_detail.html  product_list.html
